fix visibility of backdrop to dont conflict with use by other components

--- a/sources/styles/specs/backdrop.scss
+++ b/sources/styles/specs/backdrop.scss
@@ -1,3 +1,3 @@
 @media (min-width: 768px) {
-  body:before {display: none}
+  .mn-select-visible:before {display: none}
 }
